# ledger-plugin-batch-deposit

./: .gitignore  .gitmodules  Makefile  PLUGIN_SPECIFICATION.md  README.md  justfile  ledger_app.toml  pyproject.toml
.github/workflows/: README.md  build_and_functional_tests.yml  lint-workflow.yml
fuzzing/: CMakeLists.txt  README.md  fuzz_plugin.c  mocks.c
src/: handle_finalize.c  handle_init_contract.c  handle_provide_parameter.c  handle_provide_token.c  handle_query_contract_id.c  handle_query_contract_ui.c  plugin.h
tests/: README.md  conftest.py  test_swap.py
tests/abis/: 0x8fC32441C13706bB981A506FdE65DeDD5dEF3981.abi.json
